--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-sparkbot",
-  "version": "v0.9.1",
+  "version": "v0.9.2",
   "description": "experiment Cisco Spark Webhook and build Spark Bots in nodejs",
   "main": "index.js",
   "keywords": [
@@ -11,7 +11,7 @@
     "Express"
   ],
   "scripts": {
-    "start": "node tests/onEvent-all-all.js"
+    "start": "node quickstart/onEvent-all-all.js"
   },
   "homepage": "https://github.com/CiscoDevNet/node-sparkbot#readme",
   "repository": {
