secret checks enhancements

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "body-parser": "^1.15.0",
     "debug": "^2.2.0",
     "express": "^4.13.4",
-    "htmlparser2": "^3.9.1",
-    "request": "^2.74.0"
+    "htmlparser2": "^3.9.1"
   }
 }
