--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "node-sparkbot",
-  "version": "v1.0.0",
-  "description": "Experiment Webex Teams Webhook and build Chatbots in Node.js",
+  "version": "v1.1.0",
+  "description": "Register webhook for Webex and build Chatbots in Node.js",
   "main": "index.js",
   "keywords": [
-    "SparkBot",
-    "WebexTeams",
+    "Webex",
     "Webhook",
-    "NodeJS",
-    "Express"
+    "Node",
+    "Express",
+    "ChatBot"
   ],
   "scripts": {
     "start": "node quickstart/onEvent-all-all.js"
