--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "got": "^9.6.0",
     "htmlparser2": "^3.10.1"
   }
 }
